Noteworthy changes in version 2.0.2
------------------------------------------------

 * A new flag may now be used to convey comments via assuan_transact.

 * Interface changes relative to the 2.0.1 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 ASSUAN_CONVEY_COMMENTS   NEW.
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


Noteworthy changes in version 2.0.1 (2010-08-09)
------------------------------------------------

 * Support for WindowsCE.

 * Input and output notification handler can now really access the
   parsed fd as stated in the manual.

 * Cleaned up the logging.

 * Interface changes relative to the 2.0.0 release:
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 assuan_free               NEW.
 _assuan_w32ce_create_pipe NEW.
 ASSUAN_LOG_CONTROL        NEW.
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


Noteworthy changes in version 2.0.0 (2010-01-08)
------------------------------------------------

 * Now using libtool and builds a DSO.

 * Lots of interface cleanups.  See below for details of the most
   important changes.  Here is a quick note on how to upgrade:

   For each invocation of the connect or server functions, allocate a
   context with assuan_new and use that.  Instead of assuan_disconnect
   or assuan_deinit_server, call assuan_release.  Use
   assuan_set_gpg_err_source instead of assuan_set_assuan_err_source.
   If you use assuan_pipe_connect with NAME of NULL, you have to
   provide a non-NULL ARGV argument and check that against "server" or
   "client" to determine which end you got after fork().  If you use
   the assuan sock interface, you must call assuan_sock_init after
   setting global context defaults.  Add a NULL as the last arg to
   assuan_register_command.

 * Pth support has changed.  This now follows the same style as
   libgcrypt by setting system hook callbacks.

 * Interface changes relative to the 1.0.5 release: