@@ -164,6 +164,8 @@ typedef unsigned int assuan_flag_t;
 /* This flag changes assuan_transact to return comment lines via the
    status callback.  The default is to skip comment lines.  */
 #define ASSUAN_CONVEY_COMMENTS 4
+/* This flags disables logging for one context.  */
+#define ASSUAN_NO_LOGGING 5
 
 /* For context CTX, set the flag FLAG to VALUE.  Values for flags
    are usually 1 or 0 but certain flags might allow for other values;
